Fixed Bug Circular Dependency